JEAP-6074 Cleanup